# ais-devil2-wine-quality

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  download_model.py  prometheus.yml  pyproject.toml  wine_quality_api.py  wine_quality_training.py
.dvc/: config
.github/workflows/: api.yml  train.yml
data/: winequality.parquet
models/: wine_quality_model.metadata.json
